[package]
name = "image_filters"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "WebAssembly image filters"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4", optional = true }

[features]
default = ["wee_alloc"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
