[package]
name = "p2p_cdn"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
quinn = "0.10"
rustls = "0.21"
rustls-pemfile = "1.0"
sha1 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.0"
futures = "0.3"
dashmap = "5.0"
chrono = "0.4"
rcgen = "0.11"

[[bin]]
name = "node"
path = "src/bin/node.rs"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"
