[package]
name = "dep-scanner"
version = "0.1.0"
edition = "2021"
description = "A multi-language dependency security scanner"
license = "MIT"
repository = ""

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
thiserror = "1.0"
semver = "1.0"
walkdir = "2.4"
chrono = "0.4"
regex = "1.10"
roxmltree = "0.18"
uuid = { version = "1.4", features = ["v4", "serde"] }
