[workspace]
members = ["ebpf", "user"]
resolver = "2"

[workspace.dependencies]
aya = "0.12.0"
aya-log-ebpf = "0.1.0"
aya-log = "0.1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
axum-extra = { version = "0.9", features = ["ws"] }
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
