[package]
name = "secmon"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { workspace = true, features = ["async_tokio"] }
aya-log = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
libc = "0.2"
nix = { version = "0.27", features = ["cap"] }
tower-http = { version = "0.5", features = ["cors"] }
hex = "0.4"

# eBPF program is built separately using cargo-ebpf
# See ../build-ebpf.sh or Makefile build-ebpf target
